# rust-oryx

./: .gitignore  Cargo.toml  README.txt  flake.nix
ctl/: Cargo.toml
ctl/src/: main.rs
hid/: Cargo.toml
hid/src/: error.rs  inner.rs  layout.rs  lib.rs  matrix.rs  protocol.rs
jobs/: Cargo.toml  default.toml
jobs/integration/nvim/lua/codecompanion/_extensions/: jobs.lua
jobs/integration/nvim/lua/jobs/: init.lua
jobs/integration/nvim/lua/opencode_jobs/: init.lua
jobs/src/: main.rs
look/: Cargo.toml
look/src/: main.rs
lua/codecompanion/_extensions/: jobs.lua
lua/jobs/: init.lua  test.lua
lua/lualine/components/: jobs.lua
lua/opencode-jobs/: init.lua
lua/opencode_jobs/: init.lua
nix/: oryx-jobs.nix
noctalia/: BarWidget.qml  ColorSpecRow.qml  Main.qml  Panel.qml  ProgressIcon.qml  Settings.qml  manifest.json  settings.json
train/: Cargo.toml
train/assets/: gohufont-uni-11.bdf
train/src/: main.rs
