[package]
name = "oryx-hid"
version = "0.1.0"
edition = "2021"

[lib]
name = "oryx_hid"
path = "src/lib.rs"

[[bin]]
name = "oryx_hid"
path = "src/main.rs"

[dependencies]
async-hid = "0.5"
bisync = "0.3"
hidapi = "2"
futures-lite = "2"
thiserror = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
