[package]
name = "oryx-jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
oryx-hid = { path = "../hid" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
